[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/gui/1876.jpg" type="Texture" id=1]
[ext_resource path="res://PlaymegamesReguler-2OOee.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/endmenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_color = Color( 0.917647, 0.0470588, 0.741176, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[node name="endmenu" type="Node"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 200
custom_constants/margin_left = 0
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 369.0
margin_top = 200.0
margin_right = 655.0
margin_bottom = 550.0
size_flags_horizontal = 4
custom_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 286.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.917647, 0.0470588, 0.741176, 1 )
text = "Game Over"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 68.0
margin_top = 71.0
margin_right = 218.0
margin_bottom = 213.0
size_flags_horizontal = 4

[node name="Scores" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 150.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.337255, 0.941176, 1 )
text = " Scores: "

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/Scores"]
anchor_left = 0.733
anchor_top = 0.107
anchor_right = 0.874
anchor_bottom = 1.143
margin_left = 0.0500107
margin_top = -1.996
margin_right = -0.0039978
margin_bottom = -3.004
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.937255, 0.337255, 0.941176, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 150.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0.678431, 0.694118, 0.670588, 1 )
custom_colors/font_color = Color( 0.678431, 0.694118, 0.670588, 1 )
custom_colors/font_color_hover = Color( 0.831373, 0.0941176, 0.666667, 1 )
custom_colors/font_color_pressed = Color( 0.831373, 0.0941176, 0.666667, 1 )
text = "Play again"

[node name="home" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 150.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0.678431, 0.694118, 0.670588, 1 )
custom_colors/font_color = Color( 0.678431, 0.694118, 0.670588, 1 )
custom_colors/font_color_hover = Color( 0.831373, 0.0941176, 0.666667, 1 )
custom_colors/font_color_pressed = Color( 0.831373, 0.0941176, 0.666667, 1 )
text = "Home"

[node name="exit" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 150.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0.678431, 0.694118, 0.670588, 1 )
custom_colors/font_color = Color( 0.678431, 0.694118, 0.670588, 1 )
custom_colors/font_color_hover = Color( 0.831373, 0.0941176, 0.666667, 1 )
custom_colors/font_color_pressed = Color( 0.831373, 0.0941176, 0.666667, 1 )
text = "Exit"
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
